k8s/webcolor.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: web-color-green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-color-green
  template:
    metadata:
      labels: 
        app: web-color-green
    spec:
      containers:
        - name: web-color-green
          image: gabrieloliver001/web-color:green
          resources:
            limits:
              memory: "200Mi"
              cpu: "200m"
            requests:
              memory: "150M"
              cpu: "150m"
          ports:
            - name: http
              containerPort: 80
              protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: service-webcolor-green
spec: 
  selector:
    app: web-color-green
  ports:
    - name: http
      port: 80
      targetPort: 80
---

apiVersion: apps/v1
kind: Deployment
metadata: 
  name: web-color-blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-color-blue
  template:
    metadata:
      labels: 
        app: web-color-blue
    spec:
      containers:
        - name: web-color-blue
          image: gabrieloliver001/web-color:blue
          resources:
            limits:
              memory: "200Mi"
              cpu: "200m"
            requests:
              memory: "150M"
              cpu: "150m"
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: service-webcolor-blue
spec: 
  selector:
    app: web-color-blue
  ports:
    - name: http
      port: 80
      targetPort: 80
